src/main/webapp/css/srp_style.css
.heading {
  display: flex;
  align-items: center;
  margin: 30px 0px 10px 0px;
}

.logo {
  margin: 0px 20px 5px;
  text-decoration: none;
}

h1 {
  font: 400 30px Roboto, Arial, sans-serif;
  margin: 0;
}

.gsc-search-box.gsc-search-box-tools {
  margin-bottom: 0; 
}

.spacing {
  min-width: 10px;
  flex-grow: 1;
}

.srp-container {
  display: flex;
}

.srp {
  flex-grow: 1;
}

.card-container {
  margin: 20px 30px 0px 30px;
}

.card {
  margin: 20px 0px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  transition: box-shadow .25s;
  border-radius: 2px;
  width: 400px;
  max-height: 260px;
  display: flex;
}

.vote {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 20px;
  margin: 24px 14px;
}

.vote button {
  cursor: pointer;
  background: none;
  border: none;
}

.icon {
  margin-right: 5px;
  vertical-align: bottom;
}

.card .content {
  overflow: scroll;
  overflow: overlay;
  padding: 24px 24px 24px 0px;
  font-size: 16px;
  scrollbar-color: grey #FAFAFA;
}

.card .content::-webkit-scrollbar {
  width: 8px;
  height: 8px;
  background-color: #FAFAFA;
}

.card .content::-webkit-scrollbar-thumb, pre::-webkit-scrollbar-thumb {
  background: lightgrey;
  border-radius: 10px;
}

.card .content::-webkit-scrollbar-thumb:hover, pre::-webkit-scrollbar-thumb:hover {
  background: grey;
}

.card .content .card-title {
  font-size: 20px;
  font-weight: 300;
}

.card .content code {
  margin: 10px 5px;
  display: block;
  font: 12px "Lucida Console", Courier, monospace;
}

.card .content p {
  font-size: 14px;
  display: block;
}

pre {
  background: #EFF0F1;
  border-radius: 2px;
  overflow: scroll;
  scrollbar-color: grey #FAFAFA;
  scrollbar-width: thin;
}

pre::-webkit-scrollbar {
  width: 5px;
  height: 5px;
  background: #FAFAFA;  
}

